--- a/src/aura/inputTextarea/inputTextarea.cmp
+++ b/src/aura/inputTextarea/inputTextarea.cmp
@@ -17,7 +17,6 @@
 	<aura:attribute access="GLOBAL" name="required" type="Boolean" />
 	<aura:attribute access="GLOBAL" name="helpText" type="String" />
 	<aura:attribute access="GLOBAL" name="error" type="String" />
-	<aura:attribute access="GLOBAL" name="errors" type="String[]" />
 	<aura:attribute access="GLOBAL" name="elementClass" type="String" />
 	<aura:attribute access="GLOBAL" name="labelClass" type="String" />
 	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
@@ -53,8 +52,7 @@
 	               label="{!v.label}"
 	               required="{!v.required}"
 	               helpText="{!v.helpText}"
-	               error="{!v.error}"
-	               errors="{!v.errors}">
+	               error="{!v.error}">
 		<div class="slds-grid slds-grid_vertical">
 			<!-- input -->
 			<textarea aura:id="input"
