--- a/src/aura/toaster/toaster.cmp
+++ b/src/aura/toaster/toaster.cmp
@@ -12,7 +12,16 @@
 	<!-- /handlers -->
 
 	<!-- component -->
-	<div class="toasts">
+	<div class="{#
+	                'toasts' +
+	                if(
+	                    $Browser.formFactor eq 'DESKTOP',
+	                    ' toasts_desktop',
+	                    ' toasts_mobile' +
+	                    if($Browser.formFactor eq 'PHONE', ' toasts_mobile_phone', '') +
+	                    if($Browser.formFactor eq 'TABLET', ' toasts_mobile_tablet', '')
+	                )
+	            }">
 		<aura:iteration items="{!v.toasts}" var="toast">
 			<div class="toast-container">
 				<div class="{#if(toast.type eq 'other', ' slds-theme_info', ' slds-theme_' + toast.type) + ' slds-notify slds-notify_toast'}" role="alert">
@@ -20,7 +29,7 @@
 						<lightning:buttonIcon class="slds-notify__close"
 						                      iconName="utility:close"
 						                      variant="bare-inverse"
-						                      size="medium"
+						                      size="large"
 						                      title="Close"
 						                      alternativeText="Close"
 						                      name="dismiss"
@@ -33,7 +42,7 @@
 							<lightning:icon class="slds-m-right_small slds-col slds-no-flex"
 							                iconName="{#'utility:' + if(toast.type eq 'other', toast.key, toast.type)}"
 							                variant="{#if(toast.type eq 'warning', '', 'inverse')}"
-							                size="xx-small" />
+							                size="small" />
 						</aura:if>
 
 						<div class="slds-col slds-align-middle">
