--- a/src/aura/spinnerPanel/spinnerPanel.cmp
+++ b/src/aura/spinnerPanel/spinnerPanel.cmp
@@ -1,19 +1,13 @@
 <aura:component access="GLOBAL"
                 description="A simple container which can render a spinner overlay over its content.">
 	<!-- attributes -->
-	<aura:attribute access="GLOBAL"
-	                name="class"
-	                type="String"
+	<aura:attribute access="GLOBAL" name="class" type="String"
 	                description="A CSS style to be attached to the component. This style is added in addition to base styles output by the component." />
-	<aura:attribute access="GLOBAL"
-	                name="fixed"
-	                type="Boolean"
-	                default="false"
+
+	<aura:attribute access="GLOBAL" name="fixed" type="Boolean" default="false"
 	                description="Set to true to use fixed positioning. This is equivalent to specifying the slds-is-fixed CSS style." />
-	<aura:attribute access="GLOBAL"
-	                name="showSpinner"
-	                type="Boolean"
-	                default="false"
+
+	<aura:attribute access="GLOBAL" name="showSpinner" type="Boolean" default="false"
 	                description="Specifies whether the spinner should be displayed." />
 	<!-- /attributes -->
 
