Changed behavior for number inputs to apply formatting in real-time as the user is typing.

--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -78,7 +78,7 @@
 		       onfocus="{!c.inputFocus}"
 		       onblur="{!c.inputBlur}"
 		       onkeydown="{!c.inputKeyDown}"
-		       onkeypress="{!c.inputKeyPress}"
+		       oninput="{!c.inputInput}"
 		       onchange="{!c.inputChange}" />
 
 		{!v.right}
