--- a/src/aura/inputSelect/inputSelect.cmp
+++ b/src/aura/inputSelect/inputSelect.cmp
@@ -1,38 +1,58 @@
-<aura:component access="GLOBAL">
+<aura:component access="GLOBAL" implements="c:inputBase"
+                description="Allows the user to select a value from a list of options.">
 	<!-- attributes -->
-	<aura:attribute access="GLOBAL" name="name" type="String" />
-	<aura:attribute access="GLOBAL" name="class" type="String" />
-	<aura:attribute access="GLOBAL" name="containerClass" type="String" />
-	<aura:attribute access="GLOBAL" name="value" type="String" />
-	<aura:attribute access="GLOBAL" name="options" type="Object[]" />
-	<aura:attribute access="GLOBAL" name="selectedIndex" type="Integer" default="-1" />
-	<aura:attribute access="GLOBAL" name="accesskey" type="String" />
-	<aura:attribute access="GLOBAL" name="placeholder" type="String" />
-	<aura:attribute access="GLOBAL" name="title" type="String" />
-	<aura:attribute access="GLOBAL" name="maxlength" type="Integer" />
-	<aura:attribute access="GLOBAL" name="tabindex" type="Integer" />
-	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false" />
-	<aura:attribute access="GLOBAL" name="editable" type="Boolean" default="false" />
-	<aura:attribute access="GLOBAL" name="autotrim" type="Boolean" default="true" />
-	<aura:attribute access="GLOBAL" name="type" type="String" default="text" />
-	<aura:attribute access="GLOBAL" name="min" type="Decimal" />
-	<aura:attribute access="GLOBAL" name="max" type="Decimal" />
-	<aura:attribute access="GLOBAL" name="precision" type="Integer" />
-	<aura:attribute access="GLOBAL" name="scale" type="Integer" />
-	<aura:attribute access="GLOBAL" name="nillable" type="Boolean" default="true" />
-	<aura:attribute access="GLOBAL" name="label" type="String" />
-	<aura:attribute access="GLOBAL" name="required" type="Boolean" />
-	<aura:attribute access="GLOBAL" name="error" type="String" />
-	<aura:attribute access="GLOBAL" name="elementClass" type="String" />
-	<aura:attribute access="GLOBAL" name="labelClass" type="String" />
-	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
-	<aura:attribute access="GLOBAL" name="errorClass" type="String" />
+	<aura:attribute access="GLOBAL" name="containerClass" type="String"
+	                description="Optional CSS style applied to the select container (slds-select_container)." />
+
+	<aura:attribute access="GLOBAL" name="value" type="String"
+	                description="The value of the component." />
+
+	<aura:attribute access="GLOBAL" name="options" type="Object[]"
+	                description="The list of available options." />
+
+	<aura:attribute access="GLOBAL" name="selectedIndex" type="Integer" default="-1"
+	                description="The zero-based index of the selected option or -1 if no option is selected." />
+
+	<aura:attribute access="GLOBAL" name="placeholder" type="String"
+	                description="Text that is displayed when the field is empty, to prompt the user for a valid entry." />
+
+	<aura:attribute access="GLOBAL" name="maxlength" type="Integer"
+	                description="The maximum number of characters allowed in the field when editable is true and type is text." />
+
+	<aura:attribute access="GLOBAL" name="editable" type="Boolean" default="false"
+	                description="Controls whether the user is allowed to enter a value that is not in the list of options." />
+
+	<aura:attribute access="GLOBAL" name="autotrim" type="Boolean" default="true"
+	                description="Controls whether leading and trailing white space is automatically trimmed." />
+
+	<aura:attribute access="GLOBAL" name="type" type="String" default="text"
+	                description="If editable is true then this attribute determines the type of data the user is allowed to enter. Accepted values are text or number." />
+
+	<aura:attribute access="GLOBAL" name="min" type="Decimal"
+	                description="The minimum value accepted by the component when editable is true and type is number." />
+
+	<aura:attribute access="GLOBAL" name="max" type="Decimal"
+	                description="The maximum value accepted by the component when editable is true and type is number." />
+
+	<aura:attribute access="GLOBAL" name="precision" type="Integer"
+	                description="The total number of digits allowed (not including the decimal point) when editable is true and type is number." />
+
+	<aura:attribute access="GLOBAL" name="scale" type="Integer"
+	                description="The number of digits allowed to the right of the decimal point when editable is true and type is number. Set this to 0 to allow only integer values." />
+
+	<aura:attribute access="GLOBAL" name="nillable" type="Boolean" default="true"
+	                description="Controls whether the component accepts blank/nill values when editable is true and type is number. If false then the value will be automatically set to 0 if the user leaves the field blank."/>
 	<!-- /attributes -->
 
 	<!-- events -->
-	<aura:registerEvent access="GLOBAL" name="onfocus" type="c:genericComponentEvent" />
-	<aura:registerEvent access="GLOBAL" name="onblur" type="c:genericComponentEvent" />
-	<aura:registerEvent access="GLOBAL" name="onchange" type="c:genericComponentEvent" />
+	<aura:registerEvent access="GLOBAL" name="onfocus" type="c:genericComponentEvent"
+	                    description="Fired when the component receives focus." />
+
+	<aura:registerEvent access="GLOBAL" name="onblur" type="c:genericComponentEvent"
+	                    description="Fired when the component loses focus." />
+
+	<aura:registerEvent access="GLOBAL" name="onchange" type="c:genericComponentEvent"
+	                    description="Fired when the value changes." />
 	<!-- /events -->
 
 	<!-- handlers -->
@@ -44,8 +64,11 @@
 	<!-- /handlers -->
 
 	<!-- methods -->
-	<aura:method access="GLOBAL" name="focus" action="{!c.focus}" />
-	<aura:method access="GLOBAL" name="select" action="{!c.select}" />
+	<aura:method access="GLOBAL" name="focus" action="{!c.focus}"
+	             description="Sets focus to the component." />
+
+	<aura:method access="GLOBAL" name="select" action="{!c.select}"
+	             description="Selects all text in the component. This method does nothing if editable is false." />
 	<!-- /methods -->
 
 	<!-- component -->
