--- a/src/aura/inputTextarea/inputTextarea.cmp
+++ b/src/aura/inputTextarea/inputTextarea.cmp
@@ -1,30 +1,31 @@
-<aura:component access="GLOBAL">
+<aura:component access="GLOBAL" implements="c:inputBase"
+                description="Allows the user to enter multi-line text.">
 	<!-- attributes -->
-	<aura:attribute access="GLOBAL" name="name" type="String" />
-	<aura:attribute access="GLOBAL" name="class" type="String" />
-	<aura:attribute access="GLOBAL" name="value" type="String" />
-	<aura:attribute access="GLOBAL" name="accesskey" type="String" />
-	<aura:attribute access="GLOBAL" name="placeholder" type="String" />
-	<aura:attribute access="GLOBAL" name="title" type="String" />
-	<aura:attribute access="GLOBAL" name="maxlength" type="Integer" />
-	<aura:attribute access="GLOBAL" name="tabindex" type="Integer" />
-	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false" />
-	<aura:attribute access="GLOBAL" name="readonly" type="Boolean" default="false" />
-	<aura:attribute access="GLOBAL" name="autotrim" type="Boolean" default="true" />
-	<aura:attribute access="GLOBAL" name="showRemaining" type="Boolean" default="true" />
-	<aura:attribute access="GLOBAL" name="label" type="String" />
-	<aura:attribute access="GLOBAL" name="required" type="Boolean" />
-	<aura:attribute access="GLOBAL" name="error" type="String" />
-	<aura:attribute access="GLOBAL" name="elementClass" type="String" />
-	<aura:attribute access="GLOBAL" name="labelClass" type="String" />
-	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
-	<aura:attribute access="GLOBAL" name="errorClass" type="String" />
+	<aura:attribute access="GLOBAL" name="value" type="String"
+	                description="The value of the component." />
+
+	<aura:attribute access="GLOBAL" name="placeholder" type="String"
+	                description="Text that is displayed when the field is empty, to prompt the user for a valid entry." />
+
+	<aura:attribute access="GLOBAL" name="maxlength" type="Integer"
+	                description="The maximum number of characters allowed in the field." />
+
+	<aura:attribute access="GLOBAL" name="autotrim" type="Boolean" default="true"
+	                description="Controls whether leading and trailing white space is automatically trimmed." />
+
+	<aura:attribute access="GLOBAL" name="showRemaining" type="Boolean" default="true"
+	                description="If true then text will be displayed below the text area that indicates how many more characters the user is can enter before the maximum length is reached. You must also specify a value for maxlength for the character count to appear." />
 	<!-- /attributes -->
 
 	<!-- events -->
-	<aura:registerEvent access="GLOBAL" name="onfocus" type="c:genericComponentEvent" />
-	<aura:registerEvent access="GLOBAL" name="onblur" type="c:genericComponentEvent" />
-	<aura:registerEvent access="GLOBAL" name="onchange" type="c:genericComponentEvent" />
+	<aura:registerEvent access="GLOBAL" name="onfocus" type="c:genericComponentEvent"
+	                    description="Fired when the component receives focus." />
+
+	<aura:registerEvent access="GLOBAL" name="onblur" type="c:genericComponentEvent"
+	                    description="Fired when the component loses focus." />
+
+	<aura:registerEvent access="GLOBAL" name="onchange" type="c:genericComponentEvent"
+	                    description="Fired when the value changes." />
 	<!-- /events -->
 
 	<!-- handlers -->
@@ -33,8 +34,11 @@
 	<!-- /handlers -->
 
 	<!-- methods -->
-	<aura:method access="GLOBAL" name="focus" action="{!c.focus}" />
-	<aura:method access="GLOBAL" name="select" action="{!c.select}" />
+	<aura:method access="GLOBAL" name="focus" action="{!c.focus}"
+	             description="Sets focus to the component." />
+
+	<aura:method access="GLOBAL" name="select" action="{!c.select}"
+	             description="Selects all text in the component." />
 	<!-- /methods -->
 
 	<!-- component -->
