--- a/src/aura/inputDate/inputDate.cmp
+++ b/src/aura/inputDate/inputDate.cmp
@@ -36,7 +36,8 @@
 	               controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
 	               required="{!v.required}"
-	               error="{!v.error}">
+	               error="{!v.error}"
+	               errors="{!v.errors}">
 		<aura:if isTrue="{#$Browser.formFactor eq 'DESKTOP'}">
 			<!-- desktop -->
 			<div aura:id="container"
